--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ jar {
 
 	manifest {
 
-		attributes 'RestfakeApplication': 'com.example.TpAPI.TpApiApplication' // Reemplaza 'tu.paquete.MainClass' con la clase principal de tu aplicación
+		attributes 'TpApiApplication': 'com.example.TpAPI.TpApiApplication' // Reemplaza 'tu.paquete.MainClass' con la clase principal de tu aplicación
 
 	}
 
